# sovereign-agent-mesh

./: README.md  pyproject.toml
mesh-core/: mesh_core.py
src/sovereign_agent_mesh/: __init__.py  discovery.py  mesh.py
